--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Long Haul
-description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
+title: SuperThisMe
+description: portfoio for development product by SuperThisMe
 
-url: http://brianmaierjr.github.com/long-haul
+url: https://superthisme.github.io/
 baseurl: ""
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
@@ -16,13 +16,15 @@ navigation:
     url: /index.html
   - title: About
     url: /about
+  - title: Project
+    url: /project
   - title: Contact
     url: /contact
 
 social:
-  github: brianmaierjr
-  twitter: brianmaierjr
-  facebook: brianmaierjr
-  email: brimaidesigns@gmail.com
+  github: SuperThisMe
+  twitter: SuperThisMe
+  facebook: SuperThisMe
+  email: SuperThisMe
 
-google_analytics: "UA-58263416-1"
+google_analytics: "UA-58263416-111"
