--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ paginate: 5
 
 navigation:
   - title: Home
-    url: /index.html
+    url: /
   - title: About
     url: /about
   - title: Project
